1126 - add LangGraph example code

--- a/1126-LangChain-Tutorials4-Agent/1126-LangChain-Tutorials4-Agent.ipynb
+++ b/1126-LangChain-Tutorials4-Agent/1126-LangChain-Tutorials4-Agent.ipynb
@@ -13,8 +13,11 @@
    "source": [
     "## Environment Setup\n",
     "\n",
-    "- LangChain: [v0.2.17](https://pypi.org/project/langchain/0.2.17/)\n",
-    "- Python: 3.12.7"
+    "- Python: 3.12.7\n",
+    "- LangChain: v3\n",
+    "\n",
+    "### Tutorial Doc\n",
+    "[LangChain Agent v2](https://python.langchain.com/v0.2/docs/introduction/)"
    ]
   },
   {
