add install guide - 1217-LangChain-Practice

--- a/1217-LangChain-Practice/1217-LangChain-Tutorial-RAG_1.ipynb
+++ b/1217-LangChain-Practice/1217-LangChain-Tutorial-RAG_1.ipynb
@@ -60,6 +60,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### For Mac M1\n",
+    "\n",
+    "[psycopg2 install](https://stackoverflow.com/questions/66888087/cannot-install-psycopg2-with-pip3-on-m1-mac)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 製作目標資料（RAG知識集）"
    ]
   },
