[1223] civilcode DB Done

--- a/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/1223-CivilCode-ChatBot.ipynb
+++ b/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/1223-CivilCode-ChatBot.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Config"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -58,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 民法資料存入"
+    "# 民法資料存入資料庫"
    ]
   },
   {
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,13 +237,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 直接存會卡到API上限\n",
+    "### 失敗：LangChain 的 .add_document() 方法\n",
     "\n",
-    "S0 等級的 Azure RPM 沒辦法一次呼叫那個多次\n",
-    "\n",
-    "```plaintext\n",
-    "RateLimitError: Error code: 429 - {'error': {'code': '429', 'message': 'Requests to the Embeddings_Create Operation under Azure OpenAI API version 2024-08-01-preview have exceeded call rate limit of your current OpenAI S0 pricing tier. Please retry after 86400 seconds. Please go here: https://aka.ms/oai/quotaincrease if you would like to further increase the default rate limit.'}}\n",
-    "```"
+    "直接存會卡到API上限\n",
+    "S0 等級的 Azure RPM 沒辦法一次呼叫那個多次"
    ]
   },
   {
@@ -240,46 +249,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import json\n",
-    "# from langchain_core.documents import Document\n",
+    "import json\n",
+    "from langchain_core.documents import Document\n",
     "\n",
-    "# civil_code_json_path = \"../data-pre-process/民法-110-01-20.json\"\n",
+    "civil_code_json_path = \"../data-pre-process/民法-110-01-20.json\"\n",
     "\n",
-    "# with open(civil_code_json_path, 'r', encoding='utf-8') as file:\n",
-    "#     json_data = json.load(file)\n",
+    "with open(civil_code_json_path, 'r', encoding='utf-8') as file:\n",
+    "    json_data = json.load(file)\n",
     "\n",
-    "# documents = []\n",
+    "documents = []\n",
     "\n",
-    "# for entry in json_data:\n",
+    "for entry in json_data:\n",
     "\n",
-    "#     if entry['article_content'] == [\"（刪除）\"]:\n",
-    "#         continue\n",
+    "    if entry['article_content'] == [\"（刪除）\"]:\n",
+    "        continue\n",
     "    \n",
-    "#     article_number = entry['article_number']\n",
-    "#     article_title = entry['article_title']\n",
-    "#     article_content = \"\".join(entry['article_content'])\n",
-    "#     part_number = entry['part_number']\n",
-    "#     part_title = entry['part_title']\n",
-    "#     chapter_number = entry['chapter_number']\n",
-    "#     chapter_title = entry['chapter_title']\n",
-    "#     source_url = entry['source_url']\n",
+    "    article_number = entry['article_number']\n",
+    "    article_title = entry['article_title']\n",
+    "    article_content = \"\".join(entry['article_content'])\n",
+    "    part_number = entry['part_number']\n",
+    "    part_title = entry['part_title']\n",
+    "    chapter_number = entry['chapter_number']\n",
+    "    chapter_title = entry['chapter_title']\n",
+    "    source_url = entry['source_url']\n",
     "\n",
-    "#     metadata = {\n",
-    "#         \"article_number\": article_number,\n",
-    "#         \"article_title\": article_title,\n",
-    "#         \"part_number\": part_number,\n",
-    "#         \"part_title\": part_title,\n",
-    "#         \"chapter_number\": chapter_number,\n",
-    "#         \"chapter_title\": chapter_title,\n",
-    "#         \"source_url\": source_url\n",
-    "#     }\n",
+    "    metadata = {\n",
+    "        \"article_number\": article_number,\n",
+    "        \"article_title\": article_title,\n",
+    "        \"part_number\": part_number,\n",
+    "        \"part_title\": part_title,\n",
+    "        \"chapter_number\": chapter_number,\n",
+    "        \"chapter_title\": chapter_title,\n",
+    "        \"source_url\": source_url\n",
+    "    }\n",
     "\n",
-    "#     document = Document(\n",
-    "#         page_content=article_content,\n",
-    "#         metadata=metadata\n",
-    "#     )\n",
+    "    document = Document(\n",
+    "        page_content=article_content,\n",
+    "        metadata=metadata\n",
+    "    )\n",
     "\n",
-    "#     documents.append(document)\n",
+    "    documents.append(document)\n",
+    "\n",
+    "import time\n",
+    "# batch processing\n",
+    "# input 500 documents every 1 minute\n",
+    "\n",
+    "# for i in range(0, len(documents), 500):\n",
+    "#     vector_store.add_documents(documents[i:i+500])\n",
+    "#     time.sleep(60)\n",
     "\n",
     "# vector_store.add_documents(documents)"
    ]
@@ -288,11 +305,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 用批次處理\n",
+    "#### 不清楚為啥會出錯\n",
     "\n",
-    "用 OpenAI 的 [Batch API 處理](https://platform.openai.com/docs/api-reference/batch)，比較省錢\n",
+    "額度也給夠了，batch 也實施了，沒用。\n",
     "\n",
-    "缺點是要手動轉換資料並寫入資料庫，很要命"
+    "```plaintext\n",
+    "RateLimitError: Error code: 429 - {'error': {'code': '429', 'message': 'Requests to the Embeddings_Create Operation under Azure OpenAI API version 2024-08-01-preview have exceeded call rate limit of your current OpenAI S0 pricing tier. Please retry after 86400 seconds. Please go here: https://aka.ms/oai/quotaincrease if you would like to further increase the default rate limit.'}}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 成功：用外面的 Embedding 然後寫SQL存入 PGvector\n",
+    "\n",
+    "用 OpenAI 的 [Batch API 處理](https://platform.openai.com/docs/api-reference/batch)，比較省錢，缺點是要手動轉換資料並寫入資料庫，很要命\n",
+    "\n",
+    "需要輸入 langchain 自行建立的 `collection id`，才能符合 FK key 規則，可以去 VectorDB 的 `langchain_pg_collection`  Table 查詢。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import psycopg2\n",
+    "# import json\n",
+    "# import uuid\n",
+    "# import os\n",
+    "\n",
+    "# batchapi_embed_file_path = \"../data-pre-process/batch_67679735cb7081909fb3c8a66d1336cb_output.jsonl\"\n",
+    "# raw_json_path = \"../data-pre-process/民法-110-01-20.json\"\n",
+    "\n",
+    "# conn = psycopg2.connect(\n",
+    "#     dbname=\"civilcode\",\n",
+    "#     user=os.environ[\"POSTGRES_USER\"],\n",
+    "#     password=os.environ[\"POSTGRES_PASSWORD\"],\n",
+    "#     host=\"localhost\",\n",
+    "#     port=\"5433\" # 連線到 vectorstore\n",
+    "# )\n",
+    "\n",
+    "# cur = conn.cursor()\n",
+    "\n",
+    "# with open(batchapi_embed_file_path, 'r', encoding='utf-8') as file:\n",
+    "#     batchapi_embed_data_list = [json.loads(line.strip()) for line in file]\n",
+    "\n",
+    "# with open(raw_json_path, 'r', encoding='utf-8') as file:\n",
+    "#     raw_json_data = json.load(file)\n",
+    "\n",
+    "# collection_id = input(\"請輸入 collection_id: \")\n",
+    "\n",
+    "# for i, batchapi_embed_data in enumerate(batchapi_embed_data_list):\n",
+    "\n",
+    "#     if raw_json_data[i]['article_content'] == [\"（刪除）\"]:\n",
+    "#         continue\n",
+    "\n",
+    "#     id = str(uuid.uuid4())\n",
+    "#     embedding = batchapi_embed_data['response']['body']['data'][0]['embedding']\n",
+    "#     document = raw_json_data[i]['article_content']\n",
+    "#     cmetadata = json.dumps(raw_json_data[i])\n",
+    "\n",
+    "#     cur.execute(\"\"\"\n",
+    "#     INSERT INTO langchain_pg_embedding (id, collection_id, embedding, document, cmetadata) \n",
+    "#     VALUES (%s, %s, %s, %s, %s);\n",
+    "#     \"\"\", (\n",
+    "#         id, \n",
+    "#         collection_id, \n",
+    "#         embedding, \n",
+    "#         document, \n",
+    "#         cmetadata\n",
+    "#     ))\n",
+    "\n",
+    "# conn.commit()\n",
+    "\n",
+    "# cur.close()\n",
+    "# conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LangGraph"
    ]
   },
   {
