--- a/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/1223-CivilCode-ChatBot.ipynb
+++ b/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/1223-CivilCode-ChatBot.ipynb
@@ -51,6 +51,13 @@
     "    openai_api_version = os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
     ")\n",
     "\n",
+    "gpt4o = AzureChatOpenAI(\n",
+    "    api_key=os.environ[\"MY_AZURE_OPENAI_API_KEY\"],\n",
+    "    azure_endpoint = os.environ[\"MY_AZURE_OPENAI_ENDPOINT\"],\n",
+    "    azure_deployment = os.environ[\"MY_AZURE_OPENAI_DEPLOYMENT_NAME_CHAT\"],\n",
+    "    openai_api_version = os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
+    ")\n",
+    "\n",
     "embeddings = AzureOpenAIEmbeddings(\n",
     "    azure_endpoint = os.environ[\"AZURE_OPENAI_ENDPOINT\"],\n",
     "    azure_deployment = os.environ[\"AZURE_OPENAI_DEPLOYMENT_NAME_EMBEDDINGS\"],\n",
@@ -156,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,51 +256,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "from langchain_core.documents import Document\n",
+    "# import json\n",
+    "# from langchain_core.documents import Document\n",
     "\n",
-    "civil_code_json_path = \"../data-pre-process/民法-110-01-20.json\"\n",
+    "# civil_code_json_path = \"../data-pre-process/民法-110-01-20.json\"\n",
     "\n",
-    "with open(civil_code_json_path, 'r', encoding='utf-8') as file:\n",
-    "    json_data = json.load(file)\n",
+    "# with open(civil_code_json_path, 'r', encoding='utf-8') as file:\n",
+    "#     json_data = json.load(file)\n",
     "\n",
-    "documents = []\n",
+    "# documents = []\n",
     "\n",
-    "for entry in json_data:\n",
+    "# for entry in json_data:\n",
     "\n",
-    "    if entry['article_content'] == [\"（刪除）\"]:\n",
-    "        continue\n",
+    "#     if entry['article_content'] == [\"（刪除）\"]:\n",
+    "#         continue\n",
     "    \n",
-    "    article_number = entry['article_number']\n",
-    "    article_title = entry['article_title']\n",
-    "    article_content = \"\".join(entry['article_content'])\n",
-    "    part_number = entry['part_number']\n",
-    "    part_title = entry['part_title']\n",
-    "    chapter_number = entry['chapter_number']\n",
-    "    chapter_title = entry['chapter_title']\n",
-    "    source_url = entry['source_url']\n",
+    "#     article_number = entry['article_number']\n",
+    "#     article_title = entry['article_title']\n",
+    "#     article_content = \"\".join(entry['article_content'])\n",
+    "#     part_number = entry['part_number']\n",
+    "#     part_title = entry['part_title']\n",
+    "#     chapter_number = entry['chapter_number']\n",
+    "#     chapter_title = entry['chapter_title']\n",
+    "#     source_url = entry['source_url']\n",
     "\n",
-    "    metadata = {\n",
-    "        \"article_number\": article_number,\n",
-    "        \"article_title\": article_title,\n",
-    "        \"part_number\": part_number,\n",
-    "        \"part_title\": part_title,\n",
-    "        \"chapter_number\": chapter_number,\n",
-    "        \"chapter_title\": chapter_title,\n",
-    "        \"source_url\": source_url\n",
-    "    }\n",
+    "#     metadata = {\n",
+    "#         \"article_number\": article_number,\n",
+    "#         \"article_title\": article_title,\n",
+    "#         \"part_number\": part_number,\n",
+    "#         \"part_title\": part_title,\n",
+    "#         \"chapter_number\": chapter_number,\n",
+    "#         \"chapter_title\": chapter_title,\n",
+    "#         \"source_url\": source_url\n",
+    "#     }\n",
     "\n",
-    "    document = Document(\n",
-    "        page_content=article_content,\n",
-    "        metadata=metadata\n",
-    "    )\n",
+    "#     document = Document(\n",
+    "#         page_content=article_content,\n",
+    "#         metadata=metadata\n",
+    "#     )\n",
     "\n",
-    "    documents.append(document)\n",
-    "\n",
-    "import time\n",
-    "# batch processing\n",
-    "# input 500 documents every 1 minute\n",
-    "\n",
+    "# import time\n",
     "# for i in range(0, len(documents), 500):\n",
     "#     vector_store.add_documents(documents[i:i+500])\n",
     "#     time.sleep(60)\n",
@@ -393,10 +395,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "from pydantic import BaseModel\n",
+    "import psycopg2\n",
+    "import os\n",
+    "\n",
+    "@tool(response_format=\"content_and_artifact\")\n",
+    "def civilcode_retrieve(query: str):\n",
+    "    \"\"\"Retrieve information related to a query.\"\"\"\n",
+    "    retrieved_docs = vector_store.similarity_search(query, k=5) # k = Retrieve top 5 documents\n",
+    "    serialized = \"\\n\\n\".join(\n",
+    "        (f\"Source: {doc.metadata}\\n\" f\"Content: {doc.page_content}\")\n",
+    "        for doc in retrieved_docs\n",
+    "    )\n",
+    "    return serialized, retrieved_docs\n",
+    "\n",
+    "class CivilCodeNumberSearchForm(BaseModel):\n",
+    "    \"\"\"\n",
+    "        metadata for civil code search:\n",
+    "        1. 編(Part)\n",
+    "        2. 章(Chapter)\n",
+    "        3. 節(Section)\n",
+    "        4. 款(Subsection)\n",
+    "        5. 目(Item)\n",
+    "        6. 條(Article)\n",
+    "    \"\"\"\n",
+    "    article_number: str\n",
+    "\n",
+    "@tool(response_format=\"content_and_artifact\")\n",
+    "def search_civilcode_by_articleNumber(civilcode_search_form: CivilCodeNumberSearchForm):\n",
+    "    \"\"\"Retrieve information related to a query.\"\"\"\n",
+    "    article_number = civilcode_search_form.article_number\n",
+    "    \n",
+    "    if not article_number:\n",
+    "        return {\"error\": \"article_number is required\"}, None\n",
+    "    \n",
+    "    conn = psycopg2.connect(\n",
+    "        dbname=\"civilcode\",\n",
+    "        user=os.environ[\"POSTGRES_USER\"],\n",
+    "        password=os.environ[\"POSTGRES_PASSWORD\"],\n",
+    "        host=\"localhost\",\n",
+    "        port=\"5432\"\n",
+    "    )\n",
+    "    cursor = conn.cursor()\n",
+    "    \n",
+    "    query = \"SELECT * FROM law_articles WHERE article_number = %s\"\n",
+    "    cursor.execute(query, (article_number,))\n",
+    "    result = cursor.fetchone()\n",
+    "    \n",
+    "    conn.close()\n",
+    "    \n",
+    "    if result:\n",
+    "        # Assuming the columns are in the same order as in the table creation\n",
+    "        columns = [\n",
+    "            \"article_number\", \"article_title\", \"article_content\", \"part_number\", \"part_title\",\n",
+    "            \"chapter_number\", \"chapter_title\", \"section_number\", \"section_title\",\n",
+    "            \"subsection_number\", \"subsection_title\", \"item_number\", \"item_title\", \"source_url\"\n",
+    "        ]\n",
+    "        result_dict = dict(zip(columns, result))\n",
+    "        # extract the article content\n",
+    "        return result_dict[\"article_content\"], result_dict\n",
+    "    else:\n",
+    "        return {\"error\": \"Article not found\"}, None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "\n",
+    "memory = MemorySaver()\n",
+    "\n",
+    "# Specify an ID for the thread\n",
+    "config = {\"configurable\": {\"thread_id\": \"abc123\"}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.prebuilt import create_react_agent\n",
+    "\n",
+    "agent_executor = create_react_agent(gpt4o, [civilcode_retrieve, search_civilcode_by_articleNumber], checkpointer=memory) # 給予先前定義的 retrieve Tool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "定期贍養費的請求權消滅時效期間為何？。請注意：法律內容是會更動的，請不要使用不確定是否正確的知識回答問題，務必使用工具來查詢正確知識，確保回答所用的資料是最新的\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  civilcode_retrieve (call_2mLXkVFUiijFtgrpzMuWY6tV)\n",
+      " Call ID: call_2mLXkVFUiijFtgrpzMuWY6tV\n",
+      "  Args:\n",
+      "    query: 定期贍養費的請求權消滅時效期間\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: civilcode_retrieve\n",
+      "\n",
+      "Source: {'item_title': None, 'part_title': '第 一 編 總則', 'source_url': 'LawSingle.aspx?pcode=B0000001&flno=125', 'item_number': None, 'part_number': 1, 'article_title': '第 125 條', 'chapter_title': '第 六 章 消滅時效', 'section_title': None, 'article_number': '125', 'chapter_number': 6, 'section_number': None, 'article_content': ['請求權，因十五年間不行使而消滅。但法律所定期間較短者，依其規定。'], 'subsection_title': None, 'subsection_number': None}\n",
+      "Content: {請求權，因十五年間不行使而消滅。但法律所定期間較短者，依其規定。}\n",
+      "\n",
+      "Source: {'item_title': None, 'part_title': '第 二 編 債', 'source_url': 'LawSingle.aspx?pcode=B0000001&flno=756-8', 'item_number': None, 'part_number': 2, 'article_title': '第 756-8 條', 'chapter_title': '第 二 章 各種之債', 'section_title': '第 二十四 節之一 人事保證', 'article_number': '756-8', 'chapter_number': 2, 'section_number': 24, 'article_content': ['僱用人對保證人之請求權，因二年間不行使而消滅。'], 'subsection_title': None, 'subsection_number': None}\n",
+      "Content: {僱用人對保證人之請求權，因二年間不行使而消滅。}\n",
+      "\n",
+      "Source: {'item_title': None, 'part_title': '第 二 編 債', 'source_url': 'LawSingle.aspx?pcode=B0000001&flno=756-4', 'item_number': None, 'part_number': 2, 'article_title': '第 756-4 條', 'chapter_title': '第 二 章 各種之債', 'section_title': '第 二十四 節之一 人事保證', 'article_number': '756-4', 'chapter_number': 2, 'section_number': 24, 'article_content': ['人事保證未定期間者，保證人得隨時終止契約。', '前項終止契約，應於三個月前通知僱用人。但當事人約定較短之期間者，從其約定。'], 'subsection_title': None, 'subsection_number': None}\n",
+      "Content: {人事保證未定期間者，保證人得隨時終止契約。,前項終止契約，應於三個月前通知僱用人。但當事人約定較短之期間者，從其約定。}\n",
+      "\n",
+      "Source: {'item_title': None, 'part_title': '第 四 編 親屬', 'source_url': 'LawSingle.aspx?pcode=B0000001&flno=979-2', 'item_number': None, 'part_number': 4, 'article_title': '第 979-2 條', 'chapter_title': '第 二 章 婚姻', 'section_title': '第 一 節 婚約', 'article_number': '979-2', 'chapter_number': 2, 'section_number': 1, 'article_content': ['第九百七十七條至第九百七十九條之一所規定之請求權，因二年間不行使而消滅。'], 'subsection_title': None, 'subsection_number': None}\n",
+      "Content: {第九百七十七條至第九百七十九條之一所規定之請求權，因二年間不行使而消滅。}\n",
+      "\n",
+      "Source: {'item_title': None, 'part_title': '第 一 編 總則', 'source_url': 'LawSingle.aspx?pcode=B0000001&flno=126', 'item_number': None, 'part_number': 1, 'article_title': '第 126 條', 'chapter_title': '第 六 章 消滅時效', 'section_title': None, 'article_number': '126', 'chapter_number': 6, 'section_number': None, 'article_content': ['利息、紅利、租金、贍養費、退職金及其他一年或不及一年之定期給付債權，其各期給付請求權，因五年間不行使而消滅。'], 'subsection_title': None, 'subsection_number': None}\n",
+      "Content: {利息、紅利、租金、贍養費、退職金及其他一年或不及一年之定期給付債權，其各期給付請求權，因五年間不行使而消滅。}\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "根據《民法》第126條規定：利息、紅利、租金、贍養費、退職金及其他一年或不及一年之定期給付債權，其各期給付請求權，因五年間不行使而消滅。因此，定期贍養費的請求權消滅時效期間為五年。\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_message = (\n",
+    "    \"定期贍養費的請求權消滅時效期間為何？\"\n",
+    "    \"。請注意：法律內容是會更動的，請不要使用不確定是否正確的知識回答問題，務必使用工具來查詢正確知識，確保回答所用的資料是最新的\"\n",
+    ")\n",
+    "\n",
+    "for event in agent_executor.stream(\n",
+    "    {\"messages\": [{\"role\": \"user\", \"content\": input_message}]},\n",
+    "    stream_mode=\"values\",\n",
+    "    config=config\n",
+    "):\n",
+    "    event[\"messages\"][-1].pretty_print()"
+   ]
   }
  ],
  "metadata": {
