[1223] Code Clean Up

--- a/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/1223-CivilCode-plan-excute.ipynb
+++ b/1223-MultiHop-RAG/CivilCode-ChatBot-Notebook/1223-CivilCode-plan-excute.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 民法問題解答\n",
+    "\n",
+    "會將主問題拆分成多個子任務，子任務會個別被 Agent 執行，最後統整任務結果，自主決定繼續執行思考或回應答案。"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -449,14 +453,12 @@
     "    conn.close()\n",
     "    \n",
     "    if result:\n",
-    "        # Assuming the columns are in the same order as in the table creation\n",
     "        columns = [\n",
     "            \"article_number\", \"article_title\", \"article_content\", \"part_number\", \"part_title\",\n",
     "            \"chapter_number\", \"chapter_title\", \"section_number\", \"section_title\",\n",
     "            \"subsection_number\", \"subsection_title\", \"item_number\", \"item_title\", \"source_url\"\n",
     "        ]\n",
     "        result_dict = dict(zip(columns, result))\n",
-    "        # extract the article content\n",
     "        return result_dict[\"article_content\"], result_dict.get(\"article_number\")\n",
     "    else:\n",
     "        return {\"error\": \"Article not found\"}, None\n",
@@ -488,7 +490,6 @@
     "        if part_number is None:\n",
     "            return {\"error\": \"Index not found\"}\n",
     "\n",
-    "    # Connect to the PostgreSQL database\n",
     "    conn = psycopg2.connect(\n",
     "        dbname=\"civilcode\",\n",
     "        user=os.environ[\"POSTGRES_USER\"],\n",
@@ -518,10 +519,8 @@
     "        \"\"\"\n",
     "        cursor.execute(query, (part_number,))\n",
     "\n",
-    "    # Fetch and return the query results\n",
     "    results = cursor.fetchall()\n",
     "\n",
-    "    # Close the cursor and connection\n",
     "    cursor.close()\n",
     "    conn.close()\n",
     "\n",
@@ -529,7 +528,7 @@
     "\n",
     "    \n",
     "    \n",
-    "tools = [search_civilcode_by_embedding, search_civilcode_by_articleNumber, show_all_civilcode_index, search_civilcode_by_index]\n"
+    "tools = [search_civilcode_by_embedding, search_civilcode_by_articleNumber, show_all_civilcode_index, search_civilcode_by_index]"
    ]
   },
   {
@@ -571,16 +570,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain import hub\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "\n",
     "from langgraph.prebuilt import create_react_agent\n",
     "\n",
     "prompt = \"你是一位有邏輯的專業法律問題解答者，你僅會仔細思考後回答你被指派的子任務，你不會做出多餘的動作去回答主要問題。\"\\\n",
     "    \"請注意：法律內容是會更動的，請不要使用不確定是否正確的知識回答問題，務必使用工具來查詢正確知識，確保回答所用的資料是最新的。\"\\\n",
     "    \"此外，若使用工具搜尋出的法條仍包含其他條例，例如：{此情況不適用於第五十一條情況。}，你可以繼續使用search_civilcode_by_articleNumber工具搜尋該法條具體內容，確保資訊完整詳細。\"\\\n",
-    "    \"你還可以根據領域來查詢相關法條，順序是：先使用show_all_civilcode_index工具，此工具將會給你所有可用查詢的篇章節。\"\\\n",
-    "    \"接下來，search_civilcode_by_index 工具對其輸入你想查詢的篇章節，例如：總則編 - 人章 - 法人節，就會回傳整個指定篇章節的法條。\"\n",
+    "    # \"你還可以根據領域來查詢相關法條，順序是：先使用show_all_civilcode_index工具，此工具將會給你所有可用查詢的篇章節。\"\\\n",
+    "    # \"接下來，search_civilcode_by_index 工具對其輸入你想查詢的篇章節，例如：總則編 - 人章 - 法人節，就會回傳整個指定篇章節的法條。\"\n",
     "\n",
     "llm = gpt4o\n",
     "agent_executor = create_react_agent(llm, tools, state_modifier=prompt)"
@@ -624,7 +620,7 @@
     "        (\n",
     "            \"system\",\n",
     "            \"\"\"你的目標是將給予的問題拆解並制定解決方案，你將會仔細思考並拆解問題，將其分成多個子任務，目的是簡化困難的問題。\\\n",
-    "                這些子任務，也就是任務將提供給任務執行者進行。請注意：任務執行者將無法得知完整問題，請必須確保每個獨立的子任務的描述包含足夠的訊息來完成它，避免發生任務執行者無法理解的障礙。\"\"\",\n",
+    "            這些子任務將提供給任務執行者進行。請注意：請必須確保每個獨立的子任務的描述包含足夠的訊息來完成它，避免發生任務執行者無法理解的障礙。\"\"\"\n",
     "        ),\n",
     "        (\"placeholder\", \"{messages}\"),\n",
     "    ]\n",
@@ -697,10 +693,6 @@
     "from typing import Literal\n",
     "from langgraph.graph import END\n",
     "\n",
-    "# 假設 agent_executor 和 planner 支援同步操作\n",
-    "# 如果它們需要異步操作，則需要進一步封裝或重構\n",
-    "\n",
-    "\n",
     "def execute_step(state: PlanExecute):\n",
     "    \"\"\"\n",
     "    執行當前步驟，並更新執行狀態。\n",
@@ -709,17 +701,11 @@
     "    plan_str = \"\\n\".join(f\"{i+1}. {step}\" for i, step in enumerate(plan))\n",
     "    current_step_index = state.get(\"current_step_index\", 0)  # 獲取當前步驟索引\n",
     "\n",
-    "    print(f\"============================================\\n\" \n",
-    "          f\"有任務正在被執行：current_step_index: {current_step_index}, plan length: {len(plan)} \\n\")\n",
-    "\n",
-    "    # 檢查 current_step_index 是否在 plan 的範圍內\n",
     "    if current_step_index >= len(plan):\n",
     "        raise IndexError(f'\"Current step index is out of range for the plan. Current step index: {current_step_index}, Plan length: {len(plan)}\"')\n",
     "\n",
     "    task = plan[current_step_index]\n",
     "    task_formatted = f\"這是被已拆分的主要問題：{state[\"input\"]}，在拆分的任務中，你被分配到了第 {current_step_index + 1} 個任務，內容為： {task}.\"\n",
-    "\n",
-    "    print(f\"\\ntask_formatted: {task_formatted} \\n\")\n",
     "\n",
     "    agent_response = agent_executor.invoke(\n",
     "        {\"messages\": [(\"user\", task_formatted)]}\n",
@@ -732,7 +718,6 @@
     "    state[\"current_step_index\"] = current_step_index + 1  # 增加索引\n",
     "\n",
     "    if current_step_index + 1 == len(plan):\n",
-    "        # return state\n",
     "        pass\n",
     "    else:\n",
     "        return execute_step(state)\n",
@@ -777,7 +762,6 @@
     "\n",
     "    else:\n",
     "        raise ValueError(\"Unexpected output type from replanner.\")\n",
-    "\n",
     "\n",
     "def should_end(state: PlanExecute):\n",
     "    \"\"\"\n",
@@ -844,59 +828,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'plan': ['了解旅遊營業人變更旅遊內容的相關法律規定和條款。', '分析選項A：旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容是否正確。', '分析選項B：旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約是否正確。', '分析選項C：旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店是否正確。', '分析選項D：旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金是否正確。', '比較和對比上述分析結果，找出正確的敘述。'], 'current_step_index': 0}\n",
-      "============================================\n",
-      "有任務正在被執行：current_step_index: 0, plan length: 6 \n",
-      "\n",
-      "\n",
-      "task_formatted: 這是被已拆分的主要問題：第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。，在拆分的任務中，你被分配到了第 1 個任務，內容為： 了解旅遊營業人變更旅遊內容的相關法律規定和條款。. \n",
-      "\n",
-      "============================================\n",
-      "有任務正在被執行：current_step_index: 1, plan length: 6 \n",
-      "\n",
-      "\n",
-      "task_formatted: 這是被已拆分的主要問題：第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。，在拆分的任務中，你被分配到了第 2 個任務，內容為： 分析選項A：旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容是否正確。. \n",
-      "\n",
-      "============================================\n",
-      "有任務正在被執行：current_step_index: 2, plan length: 6 \n",
-      "\n",
-      "\n",
-      "task_formatted: 這是被已拆分的主要問題：第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。，在拆分的任務中，你被分配到了第 3 個任務，內容為： 分析選項B：旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約是否正確。. \n",
-      "\n",
-      "============================================\n",
-      "有任務正在被執行：current_step_index: 3, plan length: 6 \n",
-      "\n",
-      "\n",
-      "task_formatted: 這是被已拆分的主要問題：第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。，在拆分的任務中，你被分配到了第 4 個任務，內容為： 分析選項C：旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店是否正確。. \n",
-      "\n",
-      "============================================\n",
-      "有任務正在被執行：current_step_index: 4, plan length: 6 \n",
-      "\n",
-      "\n",
-      "task_formatted: 這是被已拆分的主要問題：第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。，在拆分的任務中，你被分配到了第 5 個任務，內容為： 分析選項D：旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金是否正確。. \n",
-      "\n",
-      "============================================\n",
-      "有任務正在被執行：current_step_index: 5, plan length: 6 \n",
-      "\n",
-      "\n",
-      "task_formatted: 這是被已拆分的主要問題：第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。，在拆分的任務中，你被分配到了第 6 個任務，內容為： 比較和對比上述分析結果，找出正確的敘述。. \n",
-      "\n",
+      "{'plan': ['查找民法中有關租賃契約的相關條文', '理解甲乙雙方在租賃契約中的權利和義務', '確認在沒有乙同意的情況下，甲是否可以將A屋全部轉租給丙', '確認在沒有反對約定的情況下，甲是否可以將A屋的一部分轉租給丙', '確認如果甲違法轉租A屋給丙，甲丙之間的租賃契約是否有效', '確認如果甲合法轉租A屋給丙，丙應負責任之事由所生之損害，甲是否不負賠償責任', '根據上述確認的條文和理解，判斷哪一個選項是錯誤的'], 'current_step_index': 0}\n",
       "None\n",
-      "{'response': '根據《民法》第514-5條的規定，正確的敘述是：A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。'}\n"
+      "{'response': '根據《民法》債編各種之債章的租賃節相關條文，我們可以分析以下選項：\\n\\nA. 若乙不同意，甲不得將 A 屋全部轉租第三人丙。\\n- 根據第443條，承租人非經出租人承諾，不得將租賃物轉租於他人。因此，這個選項是正確的。\\n\\nB. 若甲乙雙方無反對之約定，甲得將 A 屋一部分轉租第三人丙。\\n- 根據第443條，除有反對之約定外，承租人得將其一部分轉租於他人。因此，這個選項是正確的。\\n\\nC. 若甲將 A 屋違法轉租第三人丙，甲丙間之租賃契約仍為有效。\\n- 根據第443條，承租人違反規定將租賃物轉租於他人者，出租人得終止契約。因此，這個選項是錯誤的。\\n\\nD. 若甲將 A 屋合法轉租第三人丙，則因丙應負責任之事由所生之損害，甲不負賠償責任。\\n- 根據第444條，因次承租人應負責之事由所生之損害，承租人負賠償責任。因此，這個選項是錯誤的。\\n\\n綜合以上分析，選項 C 是錯誤的。'}\n"
      ]
     }
    ],
    "source": [
-    "config = {\"recursion_limit\": 30}\n",
-    "# inputs = {\"input\": \"第8題：甲向乙承租其所有之 A 屋。依民法規定，下列敘述，何者錯誤？A. 若乙不同意，甲不得將 A 屋全部轉租第三人丙。B. 若甲乙雙方無反對之約定，甲得將 A 屋一部分轉租第三人丙。C. 若甲將 A 屋違法轉租第三人丙，甲丙間之租賃契約仍為有效。D.若甲將 A 屋合法轉租第三人丙，則因丙應負責任之事由所生之損害，甲不負賠償責任\"}\n",
-    "inputs = {\"input\": \"第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。\"}\n",
+    "config = {\"recursion_limit\": 50}\n",
+    "inputs = {\"input\": \"第8題：甲向乙承租其所有之 A 屋。依民法規定，下列敘述，何者錯誤？A. 若乙不同意，甲不得將 A 屋全部轉租第三人丙。B. 若甲乙雙方無反對之約定，甲得將 A 屋一部分轉租第三人丙。C. 若甲將 A 屋違法轉租第三人丙，甲丙間之租賃契約仍為有效。D.若甲將 A 屋合法轉租第三人丙，則因丙應負責任之事由所生之損害，甲不負賠償責任\"}\n",
+    "# inputs = {\"input\": \"第10題：關於旅遊營業人變更旅遊內容，下列敘述，何者正確？A. 旅遊營業人僅得於因不可抗力或不可歸責之事由時，始得變更旅遊內容。B. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得終止契約，不得解除契約。C. 旅遊營業人在銷售行程資料載明「航班及飯店僅供參考」，即得因目的地當地情形隨時變更航班與飯店。D. 旅遊營業人任意變更旅遊行程內容項目，旅客僅得減少價金。\"}\n",
     "# inputs = {\"input\": \"民法繼承篇裡面說了什麼？\"}\n",
     "async for event in app.astream(inputs, config=config):\n",
     "    for k, v in event.items():\n",
